2.2 melhoria no método listar todas as medicações